--- a/templates/index.html
+++ b/templates/index.html
@@ -199,6 +199,13 @@
 						<div class="swiper-slide h-96 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-4.jpg" class="w-full h-full object-cover" /></div>
 						<div class="swiper-slide h-96 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-5.jpg" class="w-full h-full object-cover" /></div>
 						<div class="swiper-slide h-96 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-6.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-96 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-7.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-96 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-8.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-96 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-9.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-96 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-10.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-96 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-11.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-96 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-12.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-96 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-13.jpg" class="w-full h-full object-cover" /></div>
 					</div>
 					<div class="swiper-pagination"></div>
 				</div>
@@ -374,6 +381,13 @@
 						<div class="swiper-slide h-64 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-4.jpg" class="w-full h-full object-cover" /></div>
 						<div class="swiper-slide h-64 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-5.jpg" class="w-full h-full object-cover" /></div>
 						<div class="swiper-slide h-64 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-6.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-64 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-7.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-64 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-8.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-64 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-9.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-64 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-10.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-64 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-11.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-64 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-12.jpg" class="w-full h-full object-cover" /></div>
+						<div class="swiper-slide h-64 flex justify-center items-center bg-cover bg-center text-4xl text-white rounded-lg overflow-hidden"><img src="/static/gallery/LDRP-13.jpg" class="w-full h-full object-cover" /></div>
 					</div>
 					<div class="swiper-pagination"></div>
 				</div>
