--- a/templates/event.html
+++ b/templates/event.html
@@ -80,13 +80,6 @@
 				<canvas id="canvas" class="w-screen h-[calc((1024/1536)*100vw)] absolute top-0 z-0"></canvas>
 				<div class="absolute w-full top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 px-[calc(3vh)] text-center z-20">
 					<h1 class="text-[calc(12vh)] text-white uppercase font-bold z-20">Events</h1>
-					<!-- <div class="relative">
-						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" class="bi bi-search absolute top-1/2 -translate-y-1/2" viewBox="0 0 16 16">
-							<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-						</svg>
-						<input type="text" placeholder="Search Event" class="w-[60vw] bg-transparent p-4 border rounded-lg text-white placeholder:text-white focus:outline-none focus:backdrop-blur" />
-					</div> -->
-
 					<div class="w-[60vw] h-[65px] p-2 px-2 mx-auto md:px-4">
 						<div class="w-full">
 							<div class="flex items-center">
@@ -236,6 +229,16 @@
 				<div class="absolute left-0 top-0 w-full h-[60vh] bg-[rgba(0,0,0,0.5)] z-20"></div>
 				<div class="z-30">
 					<h1 class="text-[calc(6vh)] text-white uppercase font-bold">Events</h1>
+					<div class=" h-[65px] p-2 px-2 mx-auto md:px-4">
+						<div class="w-full">
+							<div class="flex items-center">
+								<div class="relative w-full">
+									<input onkeyup="Search()" id="search" placeholder="Search for a component..." class="bg-transparent w-full border border-brand-500 focus:outline-none p-3 pl-10 rounded-md text-sm text-white focus:backdrop-blur" /> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" class="w-4 h-4 text-gray-200 absolute inset-4"><path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+									<button onclick="Search()" aria-label="Primary Button" type="button" class="flex content-center items-center justify-center text-center px-4 py-2 text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-[#240A35] absolute right-1.5 top-1.5" style="flex-shrink: 0">Search</button>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="absolute w-full h-full top-0 bg-gradient-to-t from-[#240A35] via-transparent to-transparent lg:z-10 z-30"></div>
 			</section>
