--- a/templates/index.html
+++ b/templates/index.html
@@ -183,8 +183,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="swiper mySwiperEvents">
-				<div class="swiper-wrapper">
+			<div class="swiper mySwiperEvents px-2">
+				<div class="swiper-wrapper h-fit">
 					{%for event in eventArr%}
 					<div class="swiper-slide min-w-full max-w-full md:min-w-[32%] md:max-w-[32%] lg:min-w-[24%] lg:max-w-[24%] h-fit">
 						<div data-aos="zoom-in" class="bg-[#AAABE2]/50 backdrop-blur-md rounded-lg group overflow-hidden" id="event">
