--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,21 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 		<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 		<style>
+			.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+				content: '' !important;
+			}
+			.swiper-button-next:after, .swiper-button-prev:after {
+				font-family: "" !important;
+				font-size: var(--swiper-navigation-size);
+				text-transform: none!important;
+				letter-spacing: 0;
+				font-variant: initial;
+				line-height: 1;
+			}
+			.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
+				content: '';
+			}
+
 		</style>
 	</head>
 
@@ -92,18 +107,11 @@
 			<!-- Somes Events -->
 			<div class="w-full h-fit customScrollbar relative">
 				<canvas id="canvas2" class="w-screen h-[calc((1024/1536)*100vw)] absolute top-0 z-0 opacity-20"></canvas>
-				<div class="relative w-full h-fit absolute top-1/2 p-6">
-					<div class="flex flex-col items-center justify-center w-full">
-						<h3 class="uppercase text-white font-semibold">Explore Our Events</h3>
-						<p class="text-gray-500 text-center my-3 mx-auto w-[500px]">Take a look at the events organized by our students and feel free to register in any event you want to.</p>
-					</div>
-					<div class="flex items-center cursor-grab">
-						<div class="hover:scale-110 scale-100 origin-center transition-all duration-300" onclick="handleRight()">
-							<i class="bi bi-arrow-left-square text-3xl text-white cursor-pointer"></i>
-						</div>
-						<div class="flex items-center gap-5 mx-2 overflow-x-scroll customScrollbar eventGrabSlider" id="eventSlider">
-							{%for event in eventArr%}
-							<div data-aos="zoom-in" class="bg-[#AAABE2]/50 backdrop-blur-md rounded-lg group min-w-full max-w-full md:min-w-[32%] md:max-w-[32%] lg:min-w-[24%] lg:max-w-[24%] overflow-hidden" id="event">
+				<div class="swiper mySwiperEvents mx-[calc(3vh)]">
+					<div class="swiper-wrapper h-fit">
+						{%for event in eventArr%}
+						<div class="swiper-slide min-w-full max-w-full md:min-w-[32%] md:max-w-[32%] lg:min-w-[24%] lg:max-w-[24%] h-fit">
+							<div data-aos="zoom-in" class="bg-[#AAABE2]/50 backdrop-blur-md rounded-lg group overflow-hidden" id="event">
 								<div class="bg-[#2F1D69]/50 w-full h-full absolute top-full z-30 rounded-lg flex flex-col justify-between transition-all duration-300" id="cardOverlay{{event.0}}">
 									<div class="px-4 pt-5">
 										<div class="flex items-center justify-between">
@@ -174,96 +182,18 @@
 									</div>
 								</div>
 							</div>
-							{%endfor%}
 						</div>
-
-						<div class="hover:scale-110 scale-100 origin-center transition-all duration-300" onclick="handleLeft()">
-							<i class="bi bi-arrow-right-square text-3xl text-white cursor-pointer"></i>
-						</div>
+						{%endfor%}
+					</div>
+					<div class="swiper-button-prev hover:scale-110 scale-100 origin-center transition-all duration-300">
+						<i class="bi bi-arrow-left-square text-3xl text-white cursor-pointer"></i>
+					</div>
+					<div class="swiper-button-next hover:scale-110 scale-100 origin-center transition-all duration-300 ">
+						<i class="bi bi-arrow-right-square text-3xl text-white cursor-pointer"></i>
 					</div>
 				</div>
 			</div>
-			<div class="swiper mySwiperEvents px-2">
-				<div class="swiper-wrapper h-fit">
-					{%for event in eventArr%}
-					<div class="swiper-slide min-w-full max-w-full md:min-w-[32%] md:max-w-[32%] lg:min-w-[24%] lg:max-w-[24%] h-fit">
-						<div data-aos="zoom-in" class="bg-[#AAABE2]/50 backdrop-blur-md rounded-lg group overflow-hidden" id="event">
-							<div class="bg-[#2F1D69]/50 w-full h-full absolute top-full z-30 rounded-lg flex flex-col justify-between transition-all duration-300" id="cardOverlay{{event.0}}">
-								<div class="px-4 pt-5">
-									<div class="flex items-center justify-between">
-										<h1 class="text-white font-bold text-xl capitalize eventName title-truncate max-w-[85%]">{{event.0}}</h1>
-										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff" class="bi bi-x-lg cursor-pointer" viewBox="0 0 16 16" onclick="cardOverlayHandleClose('{{event.0}}')">
-											<path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z" />
-										</svg>
-									</div>
-									<hr class="my-3" />
-									<h2 class="discription-truncate text-white">{{event.2}}</h2>
-									<div class="my-1 flex items-center justify-between">
-										<div class="flex flex-col">
-											{%if event.1 != "-"%}
-											<p class="text-white my-1 capitalize text-green-500">₹{{event.1}} per head</p>
-											{%else%}
-											<p class="text-white my-1 capitalize text-green-500">Individual Not Allowed</p>
-											{%endif%} {%if event.6 == True%}
-											<p class="text-white my-1 capitalize text-green-500">₹{{event.7}} per Team</p>
-											{%else%}
-											<p class="text-white my-1 capitalize text-green-500">Team Not Allowed</p>
-											{%endif%}
-										</div>
-										<div class="flex items-center gap-2">
-											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff" class="bi bi-heart cursor-pointer" viewBox="0 0 16 16" id="likeSVG{{event.0}}" onclick="handleLike('{{event.0}}')">
-												<path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
-											</svg>
-											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ff0000" class="bi bi-heart-fill hidden opacity-0 cursor-pointer eventName" viewBox="0 0 16 16" id="likeFillSVG{{event.0}}" onclick="handleLike('{{event.0}}')">
-												<path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
-											</svg>
-											<p class="text-white">9123</p>
-										</div>
-									</div>
-								</div>
-								<div class="bg-[#2F1D69] px-4 py-2 text-center cursor-pointer" onclick="javascript:location.href='/event/{{event.5}}'">
-									<a class="text-white capitalize text-lg font-bold">register</a>
-								</div>
-							</div>
-							<div class="" id="blurOverlay{{event.0}}">
-								<div class="w-full rounded-t-lg overflow-hidden relative group">
-									<img src="{%if event.4 != '-'%}{{event.4}}{%else%}/static/logoCus.png{%endif%}" alt="1" class="group-hover:scale-110 h-48 w-full object-cover overflow-hidden transition-all duration-300" />
-								</div>
-								<div class="my-3 px-4">
-									<h1 class="text-white font-bold text-2xl capitalize eventName title-truncate">{{event.0}}</h1>
-									<div class="flex items-center justify-between my-4">
-										<div class="flex flex-col">
-											{%if event.1 != "-"%}
-											<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">₹{{event.1}} per head</p>
-											{%else%}
-											<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">Individual Not Allowed</p>
-											{%endif%} {%if event.6 == True%}
-											<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">₹{{event.7}} per Team</p>
-											{%else%}
-											<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">Team Not Allowed</p>
-											{%endif%}
-										</div>
-										<a class="bg-[#2F1D69] text-white font-semibold px-2 py-1 rounded-lg cursor-pointer" onclick="cardOverlayHandle('{{event.0}}')">View more</a>
-									</div>
-								</div>
-								<div class="flex items-center justify-center bg-[#2F1D69] h-14 px-2 -pt-10 pb-0 rounded-b-lg relative">
-									<div class="flex flex-col items-center absolute bottom-0 z-20 -translate-x-[50%]">
-										<p class="text-[#2F1D69] font-semibold bg-white rounded-full h-5 w-5 flex items-center justify-center mb-1 font-bold">1</p>
-										<p class="bg-yellow-500 px-4 py-2 text-white font-semibold transition-all duration-300 hover:py-4">₹ 1000</p>
-									</div>
-									<div class="flex flex-col items-center absolute bottom-0 translate-x-[50%] z-10">
-										<p class="text-[#2F1D69] font-semibold bg-white rounded-full h-5 w-5 flex items-center justify-center mb-1 font-bold">2</p>
-										<p class="bg-gray-500 px-4 py-[3px] text-white font-semibold transition-all duration-300 hover:py-4">₹ 750</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					{%endfor%}
-				</div>
-				<div class="swiper-button-next"></div>
-				<div class="swiper-button-prev"></div>
-			</div>
+			
 
 			<!-- Gallery -->
 			<section class="w-full py-5">
