--- a/templates/index.html
+++ b/templates/index.html
@@ -107,6 +107,10 @@
 			<!-- Somes Events -->
 			<div class="w-full h-fit customScrollbar relative">
 				<canvas id="canvas2" class="w-screen h-[calc((1024/1536)*100vw)] absolute top-0 z-0 opacity-20"></canvas>
+				<div class="flex flex-col items-center justify-center w-full">
+					<h3 class="uppercase text-white font-semibold">Explore Our Events</h3>
+					<p class="text-gray-500 text-center my-3 mx-auto w-[500px]">Take a look at the events organized by our students and feel free to register in any event you want to.</p>
+				</div>
 				<div class="swiper mySwiperEvents mx-[calc(3vh)]">
 					<div class="swiper-wrapper h-fit">
 						{%for event in eventArr%}
