--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -52,12 +52,16 @@
 
 			<section class="bg-gray-50 pb-16 pt-32 tails-selected-element outline-none radial-gradient-container w-full h-full bg-gradient-to-b from-[#221e60] to-[#240a34] z-10">
 				<div class="px-8 mx-auto sm:px-10 lg:px-12 max-w-7xl">
-					<div class="max-w-2xl mx-auto text-center my-5">
+					<div class=" mx-auto text-center my-5 relative w-full">
 						<h2 class="text-3xl font-semibold tracking-tight text-white sm:text-4xl lg:text-5xl">Tickets</h2>
+						<div class="absolute right-0 top-4 h-8 w-48 rounded-lg bg-transparent border-white border-2 focus:outline-none overflow-hidden">
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" class="w-4 h-4 text-gray-200 absolute top-2 left-2"><path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+							<input onkeyup="ticketUpdater(this)" class="h-full w-full bg-transparent text-white pl-8 focus:outline-none overflow-hidden"/>
+						</div>
 					</div>
 					<div class="grid grid-cols-1 gap-4 sm:grid-cols-2 sm:gap-5 lg:grid-cols-3 lg:gap-6 xl:grid-cols-4">
 						{% for ticket in data%}
-						<div id="ticket_{{ticket.id}}" class="flex grow flex-col justify-between pt-5 border rounded-lg {% if ticket.isPaid == True%}bg-green-500/60{%else%}bg-red-500/60{%endif%} transition-all duration-300">
+						<div id="ticket_{{ticket.id}}" data-id="{{ticket.id}}" class="ticket flex grow flex-col justify-between pt-5 border rounded-lg {% if ticket.isPaid == True%}bg-green-500/60{%else%}bg-red-500/60{%endif%} transition-all duration-300">
 							<div class="flex items-center gap-5 w-full px-4">
 								<div class="avatar w-[20%] min-w-[20%]">
 									<img class="rounded-full ring ring-[#ffffff] w-full h-full object-cover bg-slate-500" src="/static/avatars/{{ticket.profilePic}}.png" alt="avatar" />
@@ -116,6 +120,19 @@
 					});
 				} 
 			}
+			function ticketUpdater(element){
+				tickets = document.getElementsByClassName("ticket")
+				for (let ticket = 0; ticket < tickets.length; ticket++) {
+					const currentTicket = tickets[ticket];
+					if(!currentTicket.getAttribute("data-id").includes(element.value)){
+						currentTicket.classList.add("hidden")
+					}
+					else{
+						currentTicket.classList.remove("hidden")
+					}
+
+				}
+			}
 		</script>
 		<!-- Mobile Screen -->
 		<div class="block md:hidden">
@@ -165,12 +182,16 @@
 
 			<section class="bg-gray-50 pb-16 pt-32 tails-selected-element outline-none radial-gradient-container w-full h-full bg-gradient-to-b from-[#221e60] to-[#240a34] z-10">
 				<div class="px-8 mx-auto sm:px-10 lg:px-12 max-w-7xl">
-					<div class="max-w-2xl mx-auto text-center my-5">
+					<div class="max-w-2xl mx-auto text-center my-5 justify-center items-center">
 						<h2 class="text-3xl font-semibold tracking-tight text-white sm:text-4xl lg:text-5xl">Tickets</h2>
+						<div class="relative h-8 w-full rounded-lg bg-transparent border-white border-2 focus:outline-none overflow-hidden">
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" class="w-4 h-4 text-gray-200 absolute top-2 left-2"><path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+							<input onkeyup="ticketUpdater(this)" class="h-full w-full bg-transparent text-white pl-8 focus:outline-none overflow-hidden"/>
+						</div>
 					</div>
 					<div class="grid grid-cols-1 gap-4 sm:grid-cols-2 sm:gap-5 lg:grid-cols-3 lg:gap-6 xl:grid-cols-4">
 						{% for ticket in data%}
-						<div id="ticket_{{ticket.id}}" class="flex grow flex-col justify-between pt-5 border rounded-lg {% if ticket.isPaid == True%}bg-green-500/60{%else%}bg-red-500/60{%endif%} transition-all duration-300">
+						<div id="ticket_{{ticket.id}}" data-id="{{ticket.id}}" class="ticket flex grow flex-col justify-between pt-5 border rounded-lg {% if ticket.isPaid == True%}bg-green-500/60{%else%}bg-red-500/60{%endif%} transition-all duration-300">
 							<div class="flex items-center gap-5 w-full px-4">
 								<div class="avatar w-[20%] min-w-[20%]">
 									<img class="rounded-full ring ring-[#ffffff] w-full h-full object-cover bg-slate-500" src="/static/avatars/{{ticket.profilePic}}.png" alt="avatar" />
