--- a/templates/login.html
+++ b/templates/login.html
@@ -42,10 +42,10 @@
 <body class="bg-[#240a34] overflow-x-hidden">
 
     <!-- Main -->
-    <div class="relative flex items-center justify-center w-screen h-full min-h-[100vh] max-h-[100vh] overflow-hidden">
+    <div class="relative flex items-center justify-center w-screen h-full min-h-[100vh] py-20 overflow-hidden">
 
-        <div class="absolute top-0 left-0 w-screen h-[calc((797/1463)*100vw)] h-full min-h-[100vh] scale-110">
-            <canvas id="canvas" class="h-full w-full object-center block"></canvas>
+        <div class="absolute top-0 left-0 w-screen h-full min-h-[100vh] scale-110">
+            <canvas id="canvas" class="h-full min-h-[calc((797/1463)*100vw)] w-full object-center block"></canvas>
         </div>
 
 		<!-- Link to Home Div -->
