--- a/templates/otp-page.html
+++ b/templates/otp-page.html
@@ -227,7 +227,7 @@
 
 		<script>
 			let tabChange = function (val) {
-				let ele = document.querySelectorAll("input");
+				let ele = document.querySelectorAll(".otp");
 				if (ele[val - 1].value != "") {
 					ele[val].focus();
 				} else if (ele[val - 1].value == "") {
