--- a/templates/event-registration-form.html
+++ b/templates/event-registration-form.html
@@ -9,6 +9,7 @@
     <script src="/static/tailwind.js"></script>
     <link rel="stylesheet" href="/static/tailwind.css">
     <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="icon" type="image/png" href="/static/logoCus.png" />
     <style>
         .form {
             background: radial-gradient(at top left, #211e60 1%, #240a34 50%);
@@ -24,72 +25,95 @@
     </style>
 </head>
 <body class="customScrollbar">
-    <nav class="flex items-center overflow-visible justify-between text-white fixed w-full top-0 pt-[calc(2vh)] pb-10 px-[calc(3vh)] z-50 transition-all duration-300" id="navbar">
-        <a href="/">
-            <img src="/static/logoCus.png" class="h-16 w-auto" />
-        </a>
-        <ul class="lg:flex items-center hidden">
-            <li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/">Home</a></li>
-            <li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/events">Events</a></li>
-            <li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/aboutus">About Us</a></li>
-            <li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/faqs">FAQs</a></li>
-            {% if isUser == False %}
-            <li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/login">Login</a></li>
-            <li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/register">Register</a></li>
-            {%else%}
-            {% if isVolunteer == True%}
-            <li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/ticketVerifer">Verifier</a></li>
-            {%endif%}
-            <li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/myTicket">My Tickets</a></li>
-            <li class="mx-[calc(2vh)] py-2 w-14"></li>
-            {%endif%}
-        </ul>
 
-        <!-- Mobile Menu -->
-        <div class="absolute top-0 left-full flex md:hidden flex-col gap-5 items-center justify-center w-screen h-screen z-[999] bg-slate-900 bg-opacity-95 transition-all duration-300" id="mobile-menu">
-            <button class="absolute top-10 right-10 !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-x-lg"></i></button>
-            <a href="/" class="text-2xl">Home</a>
-            <a href="/events" class="text-2xl">Events</a>
-            <a href="/aboutus" class="text-2xl">About Us</a>
-            <a href="/faqs" class="text-2xl">FAQs</a>
-            {% if isUser == False %}
-                <a href="/login" class="text-2xl">Login</a>
-                <a href="/register" class="text-2xl">Register</a>
-                {%else%}
-                {% if isVolunteer == True%}
-                    <a href="/ticketVerifer" class="text-2xl">Verifer</a>
-                {%endif%}
-                <a href="/myTicket" class="text-2xl">My Tickets</a>
-            {%endif%}
-        </div>
-    </nav>
+    <!-- Laptop | Tablet Screen -->
+	<div class="md:block hidden">
+		<nav class="flex items-center overflow-visible justify-between text-white fixed w-full top-0 pt-[calc(2vh)] pb-10 px-[calc(3vh)] z-50 transition-all duration-300" id="navbar">
+			<a href="/">
+				<img src="/static/logoCus.png" class="h-16 w-auto" />
+			</a>
+			<ul class="flex items-center">
+				<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/">Home</a></li>
+				<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/events">Events</a></li>
+				<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/aboutus">About Us</a></li>
+				<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/faqs">FAQs</a></li>
+				{% if isUser == False %}
+				<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/login">Login</a></li>
+				<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/register">Register</a></li>
+				{%else%} {% if isVolunteer == True%}
+				<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/ticketVerifer">Verifer</a></li>
+				{%endif%}
+				<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/myTicket">My Tickets</a></li>
+				<li class="mx-[calc(2vh)] py-2 w-14"></li>
+				{%endif%}
+			</ul>
+		</nav>
 
-    {% if isUser == True %}
-    <div class="fixed right-10 top-6 z-[999] flex items-center justify-center gap-4 px-[calc(2vh)]">
-        <img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[50px] h-[50px] rounded-full object-cover cursor-pointer bg-slate-300" onclick="toggleProfileDropdown()" />
-
-        <div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
-            <p class="w-full px-4 text-white"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
-            <hr class="w-full my-2" />
-            <a href="/logout" class="">
-                <p class="w-full px-4 text-white"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
-            </a>
-        </div>
-        <!-- Menu Toggle Button -->
-		<button class="text-2xl text-white block lg:hidden !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
+		{% if isUser == True %}
+		<div class="fixed right-10 top-6 z-[999] flex items-center justify-center gap-4 px-[calc(2vh)]">
+			<img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[50px] h-[50px] rounded-full object-cover cursor-pointer bg-slate-300" onclick="toggleProfileDropdown()" />
+			<div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown">
+				<p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
+				<hr class="w-full my-2" />
+				<a href="/logout" class="">
+					<p class="w-full px-4 text-white"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
+				</a>
+			</div>
+		</div>
+		{%endif%}
     </div>
-    {%endif%}
-    {%if error != None%}
-    <script>
-        alert("{{error}}")
-    </script>
-    {%endif%}
+
+    <!-- Mobile Screen -->
+	<div class="block md:hidden">
+		<!-- Navbar -->
+		<nav class="flex items-center justify-between text-white fixed w-full top-0 py-[calc(3vh)] px-[calc(3vh)] z-50 transition-all duration-300" id="mobile-navbar">
+			<a href="/">
+				<img src="/static/logoCus.png" class="h-14 w-auto" />
+			</a>
+
+			<div class="relative flex items-center justify-center gap-4">
+				{% if isUser == True %}
+				<!-- Profile Image -->
+				<img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[45px] h-[45px] rounded-full object-cover bg-slate-300" onclick="toggleProfileDropdown()" />
+				<!-- Profile -->
+				<div class="fixed right-10 top-6 z-[999] overflow-visible flex items-center justify-center gap-4 px-[calc(2vh)]">
+					<div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
+						<p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
+						<hr class="w-full my-2" />
+						<a href="/logout" class="">
+							<p class="w-full px-4 text-white"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
+						</a>
+					</div>
+				</div>
+				{%endif%}
+				<!-- Menu Toggle Button -->
+				<button class="text-2xl block lg:hidden !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
+			</div>
+
+			<!-- Mobile Menu -->
+			<div class="absolute top-0 left-full flex flex-col gap-5 items-center justify-center w-screen h-screen z-[999] bg-slate-900 bg-opacity-95 transition-all duration-300" id="mobile-menu">
+				<button class="absolute top-10 right-10 !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-x-lg"></i></button>
+				<a href="/" class="text-2xl">Home</a>
+				<a href="/events" class="text-2xl">Events</a>
+				<a href="/aboutus" class="text-2xl">About Us</a>
+				<a href="/faqs" class="text-2xl">FAQs</a>
+				{% if isUser == False %}
+				<a href="/login" class="text-2xl">Login</a>
+				<a href="/register" class="text-2xl">Register</a>
+				{%else%} {% if isVolunteer == True%}
+				<a href="/ticketVerifer" class="text-2xl">Verifer</a>
+				{%endif%}
+				<a href="/myTicket" class="text-2xl">My Tickets</a>
+				{%endif%}
+			</div>
+		</nav>
+    </div>
 
     <!-- Main -->
-    <section class="relative flex items-center justify-center w-full h-full min-h-[100vh] pt-10 overflow-hidden">
+    <section class="relative flex items-center justify-center w-full h-full min-h-[100vh] pt-32 pb-20 overflow-hidden">
 
-        <div class="absolute top-0 left-0 w-screen h-[calc((1024/1536)*100vw)] h-full min-h-[100vh]">
-            <canvas id="canvas" class="h-full w-full object-center block"></canvas>
+        <div class="absolute top-0 left-0 w-screen h-full min-h-[100vh]">
+            <canvas id="canvas" class="min-h-[calc((917/1441)*100vw)] h-full w-full object-center block"></canvas>
         </div>
 
         <div class="absolute w-full h-full bg-gradient-to-t from-[#240a34] via-transparent to-transparent z-10"> </div>
@@ -101,7 +125,6 @@
                 <!-- Members -->
                 <div class="flex items-center justify-between gap-2 w-full bg-gradient-to-r from-slate-600 via-slate-600 to-slate-500 py-2 px-4 rounded-md">
                     <p id="currentusermail" class="text-green-400 flex items-center gap-2 text-lg overflow-x-scroll customScrollbar"><i class="bi bi-patch-check text-xl"></i>{{email}}</p>
-                    <button class=" text-red-600 !outline-none" onclick="removeMember(this)"><i class="bi bi-trash3"></i></button>
                 </div>
             </div>
             <form action="/addTeamMembers/" method="post" class="" >
@@ -112,7 +135,7 @@
                         <div id="formDiv" class='flex group relative w-full justify-center font-semibold'>
                             <input hidden  name="user" id="user"/>
                             <input type="email" id='email' spellCheck='false' class='peer bg-transparent font-light tracking-wider w-full pr-3 pl-1 py-2 transition-all duration-300 outline-none text-white border-b-[1px] border-white invalid:border-pink-300 invalid:text-red-400 focus:invalid:border-pink-300' placeholder=' ' tabIndex="1" />
-                            <label for='email' class='absolute left-0 -top-4 text-white text-sm transition-all duration-300 peer-focus:text-sm peer-focus:-top-4 peer-invalid:text-red-400 peer-placeholder-shown:top-2 peer-placeholder-shown:text-base peer-placeholder-shown:text-white'>Email</label>
+                            <label for='email' class='absolute left-0 -top-4 text-orange-300 text-sm transition-all duration-300 peer-focus:text-sm peer-focus:-top-4 peer-invalid:text-red-400 peer-placeholder-shown:top-2 peer-placeholder-shown:text-base peer-placeholder-shown:text-white'>Email</label>
                         </div>
                         <button type="button" class="flex items-center justify-center !outline-none text-slate-200 border-slate-200 rounded-md gap-2 text-2xl" onclick="addMember()"><i class="bi bi-plus-circle"></i></button>
                     </div>
