--- a/templates/index.html
+++ b/templates/index.html
@@ -105,9 +105,8 @@
 			</section>
 
 			<!-- Somes Events -->
-			<div class="w-full h-fit customScrollbar relative">
-				<canvas id="canvas2" class="w-screen h-[calc((1024/1536)*100vw)] absolute top-0 z-0 opacity-20"></canvas>
-				<div class="flex flex-col items-center justify-center w-full">
+			<div class="w-full h-fit customScrollbar relative my-5">
+				<div class="flex flex-col items-center justify-center w-full mb-5">
 					<h3 class="uppercase text-white font-semibold">Explore Our Events</h3>
 					<p class="text-gray-500 text-center my-3 mx-auto w-[500px]">Take a look at the events organized by our students and feel free to register in any event you want to.</p>
 				</div>
@@ -195,6 +194,9 @@
 					<div class="swiper-button-next hover:scale-110 scale-100 origin-center transition-all duration-300 ">
 						<i class="bi bi-arrow-right-square text-3xl text-white cursor-pointer"></i>
 					</div>
+				</div>
+				<div class="w-full flex items-center justify-center my-5">
+					<a href="/events" class="bg-white/20 text-white px-6 py-2 font-bold rounded-md transition-all duration-300">See More</a>
 				</div>
 			</div>
 			
@@ -374,6 +376,9 @@
 							</div>
 						</div>
 						{%endfor%}
+					</div>
+					<div class="w-full flex items-center justify-center my-5">
+						<a href="/events" class="bg-white/20 text-white px-6 py-2 font-bold rounded-md transition-all duration-300">See More</a>
 					</div>
 				</div>
 			</section>
