--- a/templates/user-reg-volunteer.html
+++ b/templates/user-reg-volunteer.html
@@ -9,6 +9,7 @@
 	<link rel="icon" type="image/png" href="/static/logoCus.png" />
     <link rel="stylesheet" href="/static/tailwind.css">
     <link rel="stylesheet" href="/static/css/style.css">
+	<link rel="icon" type="image/png" href="/static/logoCus.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <style>
         .form {
