--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -694,7 +694,7 @@
                                    <div>
                                         <p class="text-xs+">Total Registrations</p>
                                         <p class="text-xl font-semibold text-slate-700 dark:text-navy-100">{{value.0}}</p>
-                                        <div class="w-full h-[5px] bg-slate-300 rounded relative"><div class="absolute left-0 top-0 h-full w-[80%] bg-[#6667eb] rounded"></div></div>
+                                        <div class="w-full h-[5px] bg-slate-300 rounded relative"><div class="absolute left-0 top-0 h-full w-[{{value.4}}%] bg-[#6667eb] rounded"></div></div>
                                    </div>
                                    <div class="flex flex-row justify-between">
                                         <div>
