--- a/templates/admin-events-list.html
+++ b/templates/admin-events-list.html
@@ -4,8 +4,7 @@
     <!-- Meta tags  -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport"
-         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 
     <title>Xenesis | Dashboard</title>
 
@@ -29,14 +28,9 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-         rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
     <script>
-         /**
-          * THIS SCRIPT REQUIRED FOR PREVENT FLICKERING IN SOME BROWSERS
-          */
-         localStorage.getItem("dark-mode") === "dark" &&
-              document.documentElement.classList.add("dark");
+        localStorage.getItem("dark-mode") === "dark" && document.documentElement.classList.add("dark");
     </script>
 </head>
 <body class="is-header-blur">
@@ -521,7 +515,7 @@
                         <div>
                             <p class="text-xs+">Total Registrations</p>
                             <p class="text-xl font-semibold text-slate-700 dark:text-navy-100">{{value.0}}</p>
-                            <div class="w-full h-[5px] bg-slate-300 rounded relative"><div class="absolute left-0 top-0 h-full w-[80%] bg-[#6667eb] rounded"></div></div>
+                            <div class="w-full h-[5px] bg-slate-300 rounded relative"><div class="absolute left-0 top-0 h-full w-[{{value.4}}%] bg-[#6667eb] rounded"></div></div>
                         </div>
                         <div class="flex flex-row justify-between">
                             <div>
@@ -537,7 +531,7 @@
                 </div>
                 {%endfor%}
             </div>
-       </main>
+        </main>
 
         
     </div>
